Alteração para dados do banco ficarem em um secret

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -20,7 +20,7 @@ spec:
             - name: http
               containerPort: 8080
           envFrom:
-            - configMapRef:
+            - secretRef:
                 name: taste-food
           startupProbe:
             httpGet:
