--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -5,8 +5,7 @@ metadata:
 spec:
   selector:
     app: taste-food
-  type: NodePort
+  type: LoadBalancer
   ports:
     - port: 8080
       targetPort: 8080
-      nodePort: 30000
