--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: taste-food
 type: Opaque
 data:
-  SPRING_DATASOURCE_URL: amRiYzpwb3N0Z3Jlc3FsOi8vZGF0YWJhc2UtcG9zdGdyZXNxbC5kZWZhdWx0LnN2Yy5jbHVzdGVyLmxvY2FsOjU0MzIvdGFzdGVfZm9vZA==
-  SPRING_DATASOURCE_USERNAME: dGFzdGVfZm9vZA==
-  SPRING_DATASOURCE_PASSWORD: blNLY1VmNU1zOUNZUVQ4ano3a3BOQQ==
+  SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+  SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+  SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
