--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,16 @@
 			<artifactId>httpclient5-fluent</artifactId>
 			<version>5.1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.11.232</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20231013</version>
+		</dependency>
 	</dependencies>
 
 	<build>
