--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -7,3 +7,7 @@ data:
   SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
   SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
   SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+  MERCADOPAGO_API_USERID: ${MERCADOPAGO_API_USERID}
+  MERCADOPAGO_API_POSID: ${MERCADOPAGO_API_POSID}
+  MERCADOPAGO_API_ACCESSTOKEN: ${MERCADOPAGO_API_ACCESSTOKEN}
+  MERCADOPAGO_API_CALLBACKURL: ${MERCADOPAGO_API_CALLBACKURL}
