--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -11,3 +11,6 @@ data:
   MERCADOPAGO_API_POSID: ${MERCADOPAGO_API_POSID}
   MERCADOPAGO_API_ACCESSTOKEN: ${MERCADOPAGO_API_ACCESSTOKEN}
   MERCADOPAGO_API_CALLBACKURL: ${MERCADOPAGO_API_CALLBACKURL}
+  AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+  AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+  AWS_REGION: ${AWS_REGION}
