--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
 		<org.springdoc.version>2.5.0</org.springdoc.version>
 		<br.com.caelum.stella.version>2.1.6</br.com.caelum.stella.version>
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
+		<sonar.organization>fiap-tech-challenge-7soat-g13</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
