--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,10 @@
 		<org.springdoc.version>2.5.0</org.springdoc.version>
 		<br.com.caelum.stella.version>2.1.6</br.com.caelum.stella.version>
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
-		<sonar.organization>fiap-tech-challenge-7soat-g13</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.organization>fiap-tech-challenge-7soat-g13</sonar.organization>
+		<sonar.projectKey>fiap-tech-challenge-7soat-g13_fiap-tech-challenge</sonar.projectKey>
+		<sonar.qualitygate.wait>true</sonar.qualitygate.wait>
 	</properties>
 	<dependencies>
 		<dependency>
