--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
 		<sonar.organization>fiap-tech-challenge-7soat-g13</sonar.organization>
 		<sonar.projectKey>fiap-tech-challenge-7soat-g13_fiap-tech-challenge</sonar.projectKey>
 		<sonar.qualitygate.wait>true</sonar.qualitygate.wait>
+		<sonar.exclusions>
+			**/*Request.java,
+			**/*Response.java
+		</sonar.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -134,7 +138,6 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -154,7 +157,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
 		</plugins>
 	</build>
 
