--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -66,16 +66,16 @@ jobs:
         run: aws eks update-kubeconfig --name ${{ vars.AWS_EKS_CLUSTER_NAME }} --region ${{ vars.AWS_REGION }}
       - name: Replace Secrets
         run: |
-          sed -i 's/${SPRING_DATASOURCE_URL}/${{ secrets.SPRING_DATASOURCE_URL }}/g' k8s/secret.yaml
-          sed -i 's/${SPRING_DATASOURCE_USERNAME}/${{ secrets.SPRING_DATASOURCE_USERNAME }}/g' k8s/secret.yaml
-          sed -i 's/${SPRING_DATASOURCE_PASSWORD}/${{ secrets.SPRING_DATASOURCE_PASSWORD }}/g' k8s/secret.yaml
-          sed -i 's/${MERCADOPAGO_API_USERID}/${{ secrets.MERCADOPAGO_API_USERID }}/g' k8s/secret.yaml
-          sed -i 's/${MERCADOPAGO_API_POSID}/${{ secrets.MERCADOPAGO_API_POSID }}/g' k8s/secret.yaml
-          sed -i 's/${MERCADOPAGO_API_ACCESSTOKEN}/${{ secrets.MERCADOPAGO_API_ACCESSTOKEN }}/g' k8s/secret.yaml
-          sed -i 's/${MERCADOPAGO_API_CALLBACKURL}/${{ secrets.MERCADOPAGO_API_CALLBACKURL }}/g' k8s/secret.yaml
-          sed -i 's/${AWS_ACCESS_KEY_ID}/${{ secrets.AWS_ACCESS_KEY_ID_BASE64 }}/g' k8s/secret.yaml
-          sed -i 's/${AWS_SECRET_ACCESS_KEY}/${{ secrets.AWS_SECRET_ACCESS_KEY_BASE64 }}/g' k8s/secret.yaml
-          sed -i 's/${AWS_REGION}/${{ secrets.AWS_REGION_BASE64 }}/g' k8s/secret.yaml
+          sed -i "s/\${SPRING_DATASOURCE_URL}/$(echo -n ${{ secrets.SPRING_DATASOURCE_URL }} | base64 -w 0)/g" k8s/secret.yaml
+          sed -i "s/\${SPRING_DATASOURCE_USERNAME}/$(echo -n ${{ secrets.SPRING_DATASOURCE_USERNAME }} | base64 -w 0)/g" k8s/secret.yaml
+          sed -i "s/\${SPRING_DATASOURCE_PASSWORD}/$(echo -n ${{ secrets.SPRING_DATASOURCE_PASSWORD }} | base64 -w 0)/g" k8s/secret.yaml
+          sed -i "s/\${MERCADOPAGO_API_USERID}/$(echo -n ${{ secrets.MERCADOPAGO_API_USERID }} | base64 -w 0)/g" k8s/secret.yaml
+          sed -i "s/\${MERCADOPAGO_API_POSID}/$(echo -n ${{ secrets.MERCADOPAGO_API_POSID }} | base64 -w 0)/g" k8s/secret.yaml
+          sed -i "s/\${MERCADOPAGO_API_ACCESSTOKEN}/$(echo -n ${{ secrets.MERCADOPAGO_API_ACCESSTOKEN }} | base64 -w 0)/g" k8s/secret.yaml
+          sed -i "s/\${MERCADOPAGO_API_CALLBACKURL}/$(echo -n ${{ secrets.MERCADOPAGO_API_CALLBACKURL }} | base64 -w 0)/g" k8s/secret.yaml
+          sed -i "s/\${AWS_ACCESS_KEY_ID}/$(echo -n ${{ secrets.AWS_ACCESS_KEY_ID }} | base64 -w 0)/g" k8s/secret.yaml
+          sed -i "s/\${AWS_SECRET_ACCESS_KEY}/$(echo -n ${{ secrets.AWS_SECRET_ACCESS_KEY }} | base64 -w 0)/g" k8s/secret.yaml
+          sed -i "s/\${AWS_REGION}/$(echo -n ${{ secrets.AWS_REGION }} | base64 -w 0)/g" k8s/secret.yaml
       - name: Deploy to EKS
         run: kubectl apply -f k8s
       - name: Rollout Restart
