--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
 			**/*Config.java,
 			**/*Entity.java,
 			**/*Request.java,
-			**/*Response.java
+			**/*Response.java,
+			**/dto/*
 		</sonar.coverage.exclusions>
 	</properties>
 	<dependencies>
@@ -38,6 +39,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
