--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,8 +19,10 @@ spec:
           imagePullPolicy: Always
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: 9093
           envFrom:
+            - configMapRef:
+                name: taste-food
             - secretRef:
                 name: taste-food
           startupProbe:
