--- a/k8s/hpa.yaml
+++ b/k8s/hpa.yaml
@@ -1,12 +1,12 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: taste-food
+  name: order-api
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: taste-food
+    name: order-api
   minReplicas: 1
   maxReplicas: 2
   metrics:
