--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,12 +7,12 @@ services:
     depends_on:
       - postgres
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/taste_food
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/order_api
   postgres:
     image: postgres:16-alpine
     environment:
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: taste_food
+      POSTGRES_DB: order_api
     volumes:
       - postgres:/var/lib/postgresql/data
 volumes:
