--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: taste-food
+  name: order-api
 data:
-  APPLICATION_CUSTOMER_URL: "http://customer-api.default.svc.cluster.local:9091"
-  APPLICATION_PAYMENT_URL: "http://payment-api.default.svc.cluster.local:9092"
+  SERVER_PORT: "80"
+  APPLICATION_CUSTOMER_URL: "http://customer-api.default.svc.cluster.local"
+  APPLICATION_PAYMENT_URL: "http://payment-api.default.svc.cluster.local"
