--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: taste-food
+  name: order-api
   labels:
-    app: taste-food
+    app: order-api
 spec:
   selector:
     matchLabels:
-      app: taste-food
+      app: order-api
   template:
     metadata:
       labels:
-        app: taste-food
+        app: order-api
     spec:
       containers:
-        - name: taste-food
-          image: cristianobarros/taste-food
+        - name: order-api
+          image: cristianobarros/order-api
           imagePullPolicy: Always
           ports:
             - name: http
-              containerPort: 9093
+              containerPort: 80
           envFrom:
             - configMapRef:
-                name: taste-food
+                name: order-api
             - secretRef:
-                name: taste-food
+                name: order-api
           startupProbe:
             httpGet:
               port: http
