--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: taste-food
+  name: order-api
 type: Opaque
 data:
   SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
