--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/>
 	</parent>
 	<groupId>com.fiap.challenge</groupId>
-	<artifactId>taste-food</artifactId>
+	<artifactId>order-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>taste-food</name>
+	<name>order-api</name>
 	<description>Taste Food Project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
@@ -21,7 +21,7 @@
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.organization>fiap-tech-challenge-7soat-g13</sonar.organization>
-		<sonar.projectKey>fiap-tech-challenge-7soat-g13_fiap-tech-challenge</sonar.projectKey>
+		<sonar.projectKey>fiap-tech-challenge-7soat-g13_order-api</sonar.projectKey>
 		<sonar.qualitygate.wait>true</sonar.qualitygate.wait>
 		<sonar.coverage.exclusions>
 			**/*Config.java,
